Tecdoc articles includes in response