@@ -2,12 +2,11 @@ package com.automaterijal.application.services.roba.adapter;
 
 import com.automaterijal.application.domain.cache.RobaCache;
 import com.automaterijal.application.domain.constants.TecDocProizvodjaci;
-import com.automaterijal.application.domain.dto.DashboardDto;
-import com.automaterijal.application.domain.dto.MagacinDto;
-import com.automaterijal.application.domain.dto.RobaDto;
+import com.automaterijal.application.domain.dto.*;
 import com.automaterijal.application.domain.model.UniverzalniParametri;
 import com.automaterijal.application.domain.repository.roba.RobaJooqRepository;
 import com.automaterijal.application.services.ProizvodjacService;
+import com.automaterijal.application.services.SlikeService;
 import com.automaterijal.application.services.roba.RobaService;
 import com.automaterijal.application.services.roba.grupe.PodGrupaService;
 import com.automaterijal.application.tecdoc.ArticleRecord;
@@ -37,6 +36,8 @@ public class RobaAdapterService {
   @Autowired PodGrupaService podGrupaService;
 
   @Autowired ProizvodjacService proizvodjacService;
+
+  @Autowired SlikeService slikeService;
 
   /**
    * Ulazna metoda iz glavnog servisa kad je pretraga po RobaId (za sad to znaci da je pretraga po
@@ -95,8 +96,15 @@ public class RobaAdapterService {
               return robaDto;
             })
         .sorted(
-                Comparator.comparing((RobaDto robaDto) -> robaDto.getStanje() == 0) // false (stanje > 0) dolazi pre true (stanje == 0)
-                        .thenComparing(RobaDto::getPodGrupaNaziv)) // Sortiranje po nazivu grupe
+            Comparator.comparing(
+                    (RobaDto robaDto) ->
+                        robaDto.getStanje() == 0) // Artikli sa stanjem > 0 idu pre stanja 0
+                .thenComparing(robaDto -> robaDto.getPodGrupa() == 0) // Podgrupa ID 0 ide na kraj
+                .thenComparing(
+                    RobaDto
+                        ::getPodGrupaNaziv) // Unutar grupe sortiranje po nazivu) // Sortiranje po
+            // nazivu grupe
+            )
         .collect(Collectors.toList());
   }
 
@@ -110,7 +118,7 @@ public class RobaAdapterService {
                       parametri.getProizvodjac().stream()
                           .anyMatch(
                               value -> value.equalsIgnoreCase(robaDto.getProizvodjac().getProid())))
-              .toList();
+              .collect(Collectors.toList());
     }
 
     if (parametri.getGrupa() != null && !parametri.getGrupa().isEmpty()) {
@@ -120,7 +128,7 @@ public class RobaAdapterService {
                   robaDto ->
                       parametri.getGrupa().stream()
                           .anyMatch(value -> value.equalsIgnoreCase(robaDto.getGrupa())))
-              .toList();
+              .collect(Collectors.toList());
     }
 
     if (parametri.getPodgrupeZaPretragu() != null && !parametri.getPodgrupeZaPretragu().isEmpty()) {
@@ -130,11 +138,11 @@ public class RobaAdapterService {
                   robaDto ->
                       parametri.getPodgrupeZaPretragu().stream()
                           .anyMatch(value -> value == robaDto.getPodGrupa()))
-              .toList();
+              .collect(Collectors.toList());
     }
 
     if (parametri.isNaStanju()) {
-      roba = roba.stream().filter(robaDto -> robaDto.getStanje() > 0).toList();
+      roba = roba.stream().filter(robaDto -> robaDto.getStanje() > 0).collect(Collectors.toList());
     }
 
     return roba;
@@ -175,14 +183,14 @@ public class RobaAdapterService {
     List<RobaDto> pronadjenaTacnaRoba =
         robaDtos.stream()
             .filter(robaDto -> robaDto.getKatbr().equals(parametri.getTrazenaRec()))
-            .toList();
+            .collect(Collectors.toList());
 
     // Ako nema tačnog rezultata, traži približne
     if (pronadjenaTacnaRoba.isEmpty()) {
       pronadjenaTacnaRoba =
           robaDtos.stream()
               .filter(robaDto -> robaDto.getKatbr().contains(parametri.getTrazenaRec()))
-              .toList();
+              .collect(Collectors.toList());
     }
 
     // Ako su pronađeni podaci
@@ -302,6 +310,9 @@ public class RobaAdapterService {
     filterIfNotMatchingMainArticle(roba);
     filterIfNotMatchingWithTecDoc(articles, roba);
 
+    // TD Articles
+    addTecdocArticles(articles, roba);
+
     // Popuni dodatne podatke za roba (podgrupe, proizvođači itd.)
     podGrupaService.popuniPodgrupe(magacinDto, parametri, roba);
     proizvodjacService.popuniProizvodjace(roba, magacinDto, parametri);
@@ -318,9 +329,42 @@ public class RobaAdapterService {
     return magacinDto;
   }
 
+  private void addTecdocArticles(List<ArticleRecord> articles, List<RobaDto> roba) {
+    List<RobaDto> tdArticles =
+        articles.stream()
+            .map(
+                articleRecord -> {
+                  TecDocProizvodjaci tecDocProizvodjaci =
+                      TecDocProizvodjaci.pronadjiPoKljucu(articleRecord.getDataSupplierId());
+                  String katBr =
+                      TecDocProizvodjaci.generateAlternativeCatalogNumber(
+                          articleRecord.getArticleNumber(), tecDocProizvodjaci);
+
+                  boolean articleInDB =
+                      roba.stream()
+                          .anyMatch(
+                              robaDto ->
+                                  robaDto
+                                          .getProizvodjac()
+                                          .getProid()
+                                          .equals(tecDocProizvodjaci.name())
+                                      && robaDto.getKatbr().equals(katBr));
+
+                  return articleInDB
+                      ? null
+                      : RobaDto.fromTecdocArticle(articleRecord, tecDocProizvodjaci, slikeService);
+                })
+            .filter(Objects::nonNull)
+            .collect(Collectors.toList());
+
+    roba.addAll(tdArticles);
+  }
+
   private void filterIfNotMatchingWithTecDoc(List<ArticleRecord> articles, List<RobaDto> robaDtos) {
     List<RobaDto> removable =
-        robaDtos.stream().filter(robaDto -> isNotMatchingWithTecDoc(articles, robaDto)).toList();
+        robaDtos.stream()
+            .filter(robaDto -> isNotMatchingWithTecDoc(articles, robaDto))
+            .collect(Collectors.toList());
 
     if (!removable.isEmpty()) {
       log.error("Ne podudaraju se artikli sa TecDoc-om");
@@ -362,7 +406,9 @@ public class RobaAdapterService {
 
     // Remove items that do not match a valid TecDoc-mapped alternative
     List<RobaDto> removable =
-        notTdRoba.stream().filter(robaDto -> isNotMatchingMainArticle(tdRoba, robaDto)).toList();
+        notTdRoba.stream()
+            .filter(robaDto -> isNotMatchingMainArticle(tdRoba, robaDto))
+            .collect(Collectors.toList());
 
     if (!removable.isEmpty()) {
       log.error("Ne podudaraju se artikli sa TecDoc alternativom");
@@ -379,7 +425,7 @@ public class RobaAdapterService {
                 data ->
                     data.getKatbrpro().equals(robaDto.getKatbr())
                         || data.getKatbr().equals(robaDto.getKatbr()))
-            .toList();
+            .collect(Collectors.toList());
 
     // If no matches, reject this alternative item
     if (matchedTdRoba.isEmpty()) {
